接入btc price api

--- a/src/popup.html
+++ b/src/popup.html
@@ -29,25 +29,25 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <div id="btc">
+    <div>
       <span>比特币(BTC)</span>
-      <span>123</span>
+      <span id="btc">--</span>
     </div>
-    <div id="eth">
+    <div>
       <span>以太坊(ETH)</span>
-      <span>123</span>
+      <span id="eth">--</span>
     </div>
-    <div id="bcc">
+    <div>
       <span>比特现金(BCC)</span>
-      <span>123</span>
+      <span id="bcc">--</span>
     </div>
-    <div id="gold">
+    <div>
       <span>黄金(Gold)</span>
-      <span>123/g</span>
+      <span id="gold">--/g</span>
     </div>
-    <div id="dollar">
+    <div>
       <span>美元(dollar)</span>
-      <span>123</span>
+      <span id="dollar">--</span>
     </div>
   </body>
 </html>
