找到几个稳定的接口

--- a/src/popup.html
+++ b/src/popup.html
@@ -46,8 +46,8 @@
       <span id="gold">--/g</span>
     </div>
     <div>
-      <span>美元(dollar)</span>
-      <span id="dollar">--</span>
+      <span>美元(USD)</span>
+      <span id="usd">--</span>
     </div>
   </body>
 </html>
